--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+body{
+    font-family: "Syne", sans-serif;
 }
 
 .main {
